# Sentinel-Zero

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
CONTRACTS/schemas/: state_intake_contract_v1.schema.json
DOCS/CONTRACTS/: STATE_INTAKE_CONTRACT_v1.md  STATE_INTAKE_CURRENT_v1.json  STATE_INTAKE_EXAMPLE_v1.yaml
crates/sentinel_core/: Cargo.toml
crates/sentinel_core/src/: lib.rs  model.rs
crates/sentinel_core/src/alerts/: mod.rs
crates/sentinel_core/src/engine/: mod.rs  physics.rs  plugin_host.rs
crates/sentinel_core/src/ipc/: listen.rs  mod.rs  protocol.rs
crates/sentinel_core/src/perfkit/: mod.rs
crates/sentinel_core/src/util/: mod.rs
crates/sentinel_plugin_sdk/: Cargo.toml
crates/sentinel_plugin_sdk/src/: lib.rs
crates/sentinel_protocol/: Cargo.toml
crates/sentinel_protocol/src/: lib.rs  listen.rs
crates/sentinel_tui/: Cargo.toml
crates/sentinel_tui/src/: main.rs  runtime.rs
crates/sentinel_tui/src/ui/: mod.rs
docs/: RELEASE_CHECKLIST.md  SENTINEL_ZERO_AUTHORITY_AND_DUE_DILIGENCE.md  SENTINEL_ZERO_LAYMAN_SUMMARY.md  SESSION_LOG.md
docs/canary/: ZERO_RESIDUE_POLICY_CONTRACT_v1.md
docs/canary/20260302T204812Z/: CANARY_EVIDENCE.md
docs/integrations/: KF_ATTACHMENT_STANDALONE_MIRROR.md
docs/kernelkit/examples/: nomad.v0.1.yaml
docs/protocol/: IPC_NDJSON_V1.md
docs/security/: ZERO_RESIDUE_POLICY.md
docs/spec/: IRONCLAD_TUI_ARCH.md
docs/sweeps/: Opt.Sweep_01  Opt.Sweep_02  Opt.Sweep_03  Opt.Sweep_04  Opt.Sweep_05  Opt.Sweep_06  Opt.Sweep_07  Opt.Sweep_08  Opt.Sweep_09  Opt.Sweep_10  Opt.Sweep_11  Opt.Sweep_12  Opt.Sweep_13  Opt.Sweep_14  Opt.Sweep_15  Opt.Sweep_16  Opt.Sweep_17  Opt.Sweep_18  Opt.Sweep_19  Opt.Sweep_20  Opt.Sweep_21  Opt.Sweep_22  Opt.Sweep_23  Opt.Sweep_24  Opt.Sweep_25  Opt.Sweep_26  Opt.Sweep_27  Opt.Sweep_28  Opt.Sweep_29  Opt.Sweep_30  Opt.Sweep_31  Opt.Sweep_32  Opt.Sweep_33  Opt.Sweep_34  Opt.Sweep_35  Opt.Sweep_36  Opt.Sweep_37  Opt.Sweep_38  Opt.Sweep_39  Opt.Sweep_40  (+11 more)
plugins/examples/python/: plugin_demo.py
plugins/examples/rust/: Cargo.toml
plugins/examples/rust/src/: main.rs
plugins/examples/rust_plugin_demo/: Cargo.toml
plugins/examples/rust_plugin_demo/src/: main.rs
scripts/: run_dev.sh
scripts/gates/: cargo_audit_gate.sh  ipc_abuse_gate.sh  kernelkit_attestation_gate.sh  kernelkit_audit_chain_gate.sh  kernelkit_receipt_gate.sh  kernelkit_verify_perf_gate.sh  kf_attachment_mirror_gate.sh  secrets_pattern_gate.sh  snap_gate.sh  state_intake_gate.sh  state_intake_negative_gate.sh  zero_residue_negative_gate.sh
scripts/integration/: kf_mirror_export.sh
scripts/security/: assert_zero_residue.sh  check_state_intake_contract.py  hostile_sim_client.py  run_exposed_hardening_canary.sh
scripts/sweeps/: run_enterprise_sweeps.sh  run_sandbox_suite.sh
snap/: snapcraft.yaml
tools/kernelkit/: Cargo.toml
tools/kernelkit/src/: audit.rs  main.rs  normalize.rs  plan.rs  receipt.rs  verify.rs
