[package]
name = "sentinel_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
tokio = { version = "1", features = ["rt", "sync", "time", "net", "io-util", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
sysinfo = "0.38"
sentinel_protocol = { path = "../sentinel_protocol" }
tracing = "0.1"

[features]
default = []
