[package]
name = "sentinel_plugin_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "rt", "macros"] }
tokio-rustls = "0.26"

sentinel_protocol = { path = "../sentinel_protocol" }
