[package]
name = "sentinel_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
better-panic = "0.3"
ratatui = "0.30"
crossterm = "0.29"
tui-textarea = "0.7.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

sentinel_core = { path = "../sentinel_core" }
